--- a/tutorial/chat/test/fixtures/users.yml
+++ b/tutorial/chat/test/fixtures/users.yml
@@ -1,11 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  text: MyString
-  user: one
-  chat_room: one
+  email: MyString
 
 two:
-  text: MyString
-  user: two
-  chat_room: two
+  email: MyString
